finished login component

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,13 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <header>
+	  <img src="./favicon.ico" alt="Logo">
+		<h1>Dental Equipment Tracking</h1>
+	</header>
   <app-root>Loading...</app-root>
+  <footer>
+	  <p class="copyright">Created by Tech Ninjas Fresno</p>
+</footer>
 </body>
 </html>
